<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_curve"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/qvid_19"
        android:textSize="32sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/qvid_19_is_a_quiz_app_about_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnReadMoreee"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/read_more"
        android:textAllCaps="false"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_green_curve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnTakeQuiz"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_curve"
        android:text="@string/take_quiz"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReadMoreee" />


</androidx.constraintlayout.widget.ConstraintLayout>